--- a/assets/css/scss/_progress.scss
+++ b/assets/css/scss/_progress.scss
@@ -5,13 +5,13 @@
     top: 0;
     left: 0;
     background: none;
-    height: 0.15em;
+    height: 0.2em;
     z-index: 999;
 
     .article-progress-inner {
         width: 0;
         height: 100%;
-        background-color: var(--color-primary);
+        background-color: var(--color-secondary);
         transition: width 200ms ease-in-out;
     }
 }
